# sample_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint-dev.sh  entrypoint-dist.sh  pyproject.toml  pytest.ini  setup.cfg  sonar-project.properties  tox.ini
.circleci/: config.yml
.envs/circleci/: django
.envs/compose/: django  postgres
.envs/local/: django
app/: celery.py  settings.py  urls.py  wsgi.py
app/algorithm/: admin.py  apps.py  constants.py  exceptions.py  managers.py  models.py  tasks.py  utils.py
app/algorithm/candidate_validators/: __init__.py  base_validator.py  max_pathway_type_validator.py  unique_name_validator.py
app/algorithm/migrations/: 0001_initial.py  0002_auto_20230213_0803.py  0003_query_label.py  0004_functionresult.py  0005_query_expected_answer.py  0006_remove_functionresult_answers_and_more.py  0007_datasetcontent_adjectives_datasetcontent_nouns.py  0008_resultbatch_result.py  0009_alter_pathway_datasets.py  0010_alter_pathwaylmm_pathway.py  0011_lmmresult_queries_completed_and_more.py  0012_pathwayrun.py  0013_zipfscache.py  0014_pathwayrun_filtered_words.py  0015_pathwayrun_passed_words.py  0016_negativedataset.py  0017_result_pathway.py  0018_namecandidate.py  0019_pathway_candidates_per_batch.py  0020_delete_compoundword_and_more.py  0021_alter_result_rationale_and_more.py  0022_resultbatch_visible.py  0023_alter_namecandidate_unique_together.py  0024_lmmcache.py  0025_remove_pathway_basket_words.py  0026_alter_datasetcontent_unique_together_and_more.py  0027_resultbatch_bought_timestamp.py  0028_alter_resultbatch_questionnaire.py  0029_expert_review_required_field.py  0030_rename_expert_review_reqired_resultbatch_expert_review_required.py  0031_namecandidate_rationale.py  0031_pathway_cascade_level.py  0032_alter_namecandidate_rationale.py  0033_merge_20240205_1323.py  0034_result_game_complexity_level_result_was_used_in_game.py  0035_alter_result_game_complexity_level.py  0036_result_example_phrases.py  0037_update_results_game_complexity_level.py  (+1 more)
app/core/: admin.py  apps.py  authentication.py  email_text_templates.py  enums.py  filters.py  helpers.py  permissions.py  pydantic_serialization.py  sendgrid.py  signals.py  tasks.py  typing.py  urls.py  utils.py  views.py
app/core/migrations/: 0001_initial.py  (+41 more)
app/expert/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
app/game/: actions.py  admin.py  apps.py  consts.py  exceptions.py  forms.py  managers.py  models.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
app/tracker/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tests/: conftest.py  constants.py
tests/integration/: conftest.py
tests/unit/: conftest.py
tests/utils/: __init__.py  stripe_utils.py
(+91 files in other folders)
